@@ -237,7 +237,7 @@ gaih_local (name, service, req, pai, vlog)
   (*pai)->ai_socktype = req->ai_socktype ? req->ai_socktype : SOCK_STREAM;
   (*pai)->ai_protocol = req->ai_protocol;
   (*pai)->ai_addrlen = sizeof (struct sockaddr_un);
-  (*pai)->ai_addr = (void *) (*pai) + sizeof (struct addrinfo);
+  (*pai)->ai_addr = (void*)((char *) (*pai) + sizeof (struct addrinfo));
 
 #if HAVE_SA_LEN
   ((struct sockaddr_un *) (*pai)->ai_addr)->sun_len =
@@ -755,7 +755,7 @@ gaih_inet (const char *name, const struct gaih_service *service,
 	(*pai)->ai_socktype = st2->socktype;
 	(*pai)->ai_protocol = st2->protocol;
 	(*pai)->ai_addrlen  = socklen;
-	(*pai)->ai_addr = (void *) (*pai) + sizeof(struct addrinfo);
+	(*pai)->ai_addr = (void *)((char*) (*pai) + sizeof(struct addrinfo));
 #if HAVE_SA_LEN
 	(*pai)->ai_addr->sa_len = socklen;
 #endif /* SALEN */
@@ -781,8 +781,8 @@ gaih_inet (const char *name, const struct gaih_service *service,
 	  }
 
 	if (c) {
-	  (*pai)->ai_canonname = ((void *) (*pai) +
-				  sizeof (struct addrinfo) + socklen);
+	  (*pai)->ai_canonname = (void *)((char *) (*pai) +
+					  sizeof (struct addrinfo) + socklen);
 	  strcpy ((*pai)->ai_canonname, c);
 
 	} else
